--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "axios": "^0.17.0",
     "element-ui": "^2.0.1",
+    "iframe-resizer": "^4.2.11",
     "lodash": "^4.17.4",
     "vue": "^2.5.2",
     "vue-meta": "^1.2.0",
